--- a/notebooks/38-sklearn-nearest-neighbor.ipynb
+++ b/notebooks/38-sklearn-nearest-neighbor.ipynb
@@ -106,7 +106,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(x_iris,y_iris,test_size=0.3,random_state=101, stratify=y_iris)"
+    "x_train, x_test, y_train, y_test = train_test_split(x_iris,y_iris,\n",
+    "                                                    test_size=0.3,\n",
+    "                                                    random_state=101,\n",
+    "                                                    stratify=y_iris)"
    ]
   },
   {
@@ -240,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
